istio-example/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-service
spec:
  hosts:
    - "*"
  gateways:
    - backend-gateway
  http:
    - match:
        - uri:
            exact: /test
      route:
        - destination:
            host: nginx-svc
            subset: single
            port:
              number: 80
          weight: 10
        - destination:
            host: nginx-svc
            subset: multiple
            port:
              number: 80
          weight: 90
